06-cluster-setup-15_100/04-ssl/01-secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure
  namespace: web
spec:
  tls:
    - hosts: # add
      - secure-ingress.test # add
      secretName: tls-secret # add
  rules:
    - host: secure-ingress.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testsvc
                port:
                  number: 80
